--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,28 +1,25 @@
-name: Docker Image CI
- 
+name: Docker CI
+
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
- 
+    branches:
+      - "main"
+
 jobs:
- 
-  build:
- 
+  docker:
     runs-on: ubuntu-latest
- 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0 # fetch the full commit history to get a unique SHA for tagging
-    - name: Build the Docker image
-      id: build
-      run: |
-        docker build . --file Dockerfile --tag kweg/pole-libretranslate:${{ steps.build.outputs.sha }}
-        echo ::set-output name=sha::$(echo ${{ steps.build.outputs.sha }})
-    - name: Login to Docker Hub
-      run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login --username kweg --password-stdin
-    - name: Tag and Push the Docker Image
-      run: |
-        docker push kweg/pole-libretranslate:${{ steps.build.outputs.sha }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{  secrets.DOCKERHUB_TOKEN  }}
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: kweg/pole-libretranslate:latest
